feat: adicionar rota de check info e validação do tipo de presença

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.servlet.multipart.max-request-size=10MB
 # Logging
 logging.level.com.fdsmartcheck=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+spring.jackson.time-zone=America/Sao_Paulo
