--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -22,3 +22,9 @@ spring.servlet.multipart.max-request-size=10MB
 # Logging
 logging.level.com.fdsmartcheck=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+spring.jackson.time-zone=America/Sao_Paulo
+
+app.geo.secret-key=
+app.geo.max-time-diff-seconds=60
+app.geo.default-radius-meters=100
